--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -1,7 +1,7 @@
 <div class="home-intro">
     <div class="jumbo">{{site.heading}} </div>
     <div class="home-sub-text"> <h3>
-        Jekyll Garden is a markdown friendly theme lets you publish your Obsidian vault (or a subset of it) as a Jekyll static website. 
+        Hey, I am the Head of Operations & Founding Member at <a href="{{https://dreamflakes.io/}}"> Dreamflakes</a>
         Check out the <a href="{{'/notes' | relative_url}}"> demo </a>, <a href="{{'/post/features' | relative_url}}"> features </a> and <a href="{{'/post/how-to' | relative_url}}"> how to</a>.
         </h3> 
 </div> </div>
