--- a/_includes/Footer.html
+++ b/_includes/Footer.html
@@ -1,7 +1,7 @@
 {%- comment -%}
 *
 * MIT License
-* Copyright (c) 2020 Raghuveer S
+* Copyright (c) 2022 Raghuveer S, Rahul Rajeev
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
