--- a/_includes/Related.html
+++ b/_includes/Related.html
@@ -1,7 +1,7 @@
 {%- comment -%}
 *
 * MIT License
-* Copyright (c) 2020 Raghuveer S
+* Copyright (c) 2022 Raghuveer S, Rahul Rajeev
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
@@ -22,7 +22,7 @@
 * SOFTWARE.
 *
 * File: Related.html
-* Author@Raghuveer S
+* Author: Raghuveer S, Rahul Rajeev
 *
 * This file contains the markup for the small greyish box that you see at the end
 * of all blogposts. It contains the markup to create a small of all the posts
