--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -4,7 +4,7 @@
 <!-------------------------------------------------------------------------------------
 *
 * MIT License
-* Copyright (c) 2020 Raghuveer S, Hiran Venugopalan, Asim K T
+* Copyright (c) 2020 Raghuveer S, Hiran Venugopalan, Asim K T, Rahul Rajeev
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
