--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -2,8 +2,8 @@
     <h5 class="meta-title">Hi, I'm Rahul Rajeev ⸻</h5>
     <div class="jumbo">I elevate Brand Experiences through strategic use of Content, Design and Process Automation</div>
     <div class="home-sub-text"> <h3>
-       Currently I am the Head of Operations & Founding Member at <a href="https://www.dreamflakes.io/"> Dreamflakes</a>.
-        Check out the <a href="https://blog.rahulrajeev.net/"> Blog </a>, <a href="https://garden.rahulrajeev.net/"> Digital Garden </a> and <a href="https://www.instagram.com/rdrawsstuff/"> Sketchbook</a>.
+       I am the Head of Operations & Founding Member at <a href="https://www.dreamflakes.io/"> Dreamflakes</a>.
+        Check out my <a href="https://blog.rahulrajeev.net/"> Blog </a>, <a href="https://garden.rahulrajeev.net/"> Digital Garden </a> and <a href="https://www.instagram.com/rdrawsstuff/"> Sketchbook</a>.
         </h3> 
 </div> </div>
 
