--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -31,12 +31,12 @@
 
 <head>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <meta content="Hiran Venugopalan" property="og:site_name" />
+    <meta content="Rahul Rajeev" property="og:site_name" />
     <meta
-        content="Product and Type Designer | UI UX | Design Mentoring"
+        content="Writer | Artist | Head of Operations at Dreamflakes"
         property="og:description">
     <meta content="{{ site.url }}/about/" property="article:author">
-    <meta property="og:image" content="../assets/img/OGImg.png">
+    <meta property="og:image" content="../assets/img/ravicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&display=swap"
