--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -53,19 +53,19 @@
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
         <a href="{{'/notes' | relative_url}}" class="navbar-item">
-          Demo Feed
+          My Notes
         </a>
-        <a href="../post/how-to" class="navbar-item">
-          How To
+        <a href="../pages/lists" class="navbar-item">
+          Lists
         </a>
-        <a href="https://github.com/Jekyll-Garden/jekyll-garden.github.io" target="_blank" class="navbar-item">
-          Github
+        <a href="https://blog.rahulrajeev.net/#/portal/signup" target="_blank" class="navbar-item">
+          Newsletter
         </a>
-        <a href="https://jekyllrb.com/" target="_blank" class="navbar-item">
-          Jekyll
+        <a href="../pages/about" class="navbar-item">
+          About
         </a>
-        <a href="https://obsidian.md/"  target="_blank" class="navbar-item">
-          Obsidian
+        <a href="https://www.linkedin.com/in/rahulrajeeev/"  target="_blank" class="navbar-item">
+          Connect
         </a>
       </div>
       <div class="navbar-end is-hidden-mobile" onclick="modeSwitcher()" >
