Corrected lists link

--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -55,7 +55,7 @@
         <a href="{{'/notes' | relative_url}}" class="navbar-item">
           My Notes
         </a>
-        <a href="../pages/lists" class="navbar-item">
+        <a href="../lists" class="navbar-item">
           Lists
         </a>
         <a href="https://blog.rahulrajeev.net/#/portal/signup" target="_blank" class="navbar-item">
