--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -1,9 +1,11 @@
 <div class="home-intro">
     <h5 class="meta-title">Hi, I'm Rahul Rajeev ⸻</h5>
-    <div class="jumbo">I elevate Brand Experiences through strategic use of Content, Design and Process Automation</div>
-    <div class="home-sub-text"> <h3>
-       I am the Head of Operations & Founding Member at <a href="https://www.dreamflakes.io/"> Dreamflakes</a>.
-        Check out my <a href="https://blog.rahulrajeev.net/"> Blog </a>, <a href="https://garden.rahulrajeev.net/"> Digital Garden </a> and <a href="https://www.instagram.com/rdrawsstuff/"> Sketchbook</a>.
+    <div class="jumbo">I help brands find their visual identity and narrative.</div>
+    <div class="home-sub-text">
+        <h3>
+            I am a writer turned artist with 7 years of multi-dsciplinary practise in Design, Marketing and Design Ops.
+            I write around generalist perspectives at <a href="https://wholefragments.substack.com">Whole Fragments</a> and cultivate a digital garden called <a href="https://gardenv24.pages.dev/"> Zettelgarden</a>.
         </h3> 
-</div> </div>
+    </div>
+</div>
 
