--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -3,8 +3,8 @@
     <div class="jumbo">I help brands find their visual identity and narrative.</div>
     <div class="home-sub-text">
         <h3>
-            I am a writer turned artist with 7 years of multi-dsciplinary practise in Design, Marketing and Design Ops.
-            I write around generalist perspectives at <a href="https://wholefragments.substack.com">Whole Fragments</a> and cultivate a digital garden called <a href="https://gardenv24.pages.dev/"> Zettelgarden</a>.
+            I am a writer turned artist with a multi-dsciplinary practise in Design, Marketing and Design Ops.
+            I write around generalist perspectives at <a href="https://wholefragments.substack.com">Whole Fragments</a> and nurture a digital garden called <a href="https://gardenv24.pages.dev/">Zettelgarden</a>.
         </h3> 
     </div>
 </div>
