--- a/_includes/Footer.html
+++ b/_includes/Footer.html
@@ -1,4 +1,4 @@
 
-<div id="footermessage">
-    <p>Made using Jeklly Garden and maintained using Obsidian</p>
-</div> 
+<div id="footermessage" style="text-align: center; font-size: 0.5em; padding: 10px 0; width: 100%; position: relative;">
+    <p style="margin: 0;">Made using Jeklly Garden and maintained using Obsidian</p>
+</div>
