--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -4,7 +4,7 @@
     <div class="home-sub-text">
         <h3>
             I'm a writer turned artist specialising in narrative led Brand Identity & Experience Design.
-            <br><i>I write around generalist perspectives at <a href="https://wholefragments.substack.com">Whole Fragments</a> and nurture a digital garden called <a href="https://gardenv24.pages.dev/">Zettelgarden</a>.</i>
+            <br><i>I write about the world from a generalist perspective at <a href="https://wholefragments.substack.com">Whole Fragments</a> and nurture a digital garden called <a href="https://gardenv24.pages.dev/">Zettelgarden</a>.</i>
         </h3> 
     </div>
 </div>
