--- a/_includes/Footer.html
+++ b/_includes/Footer.html
@@ -1,4 +1,4 @@
 
-<div id="footermessage" style="text-align: center; font-size: 0.5em; padding: 10px 0; width: 100%; position: relative;">
-    <p style="margin: 0;">Made using Jeklly Garden and maintained using Obsidian</p>
-</div>
+<footer id="footermessage" style="text-align: center; font-size: min(0.5em, 12px); padding: 8px 0; width: 100%; position: fixed; bottom: 0; left: 0; background-color: #1f1f1f; z-index: 1000;">
+    <p style="margin: 0; opacity: 0.7; max-width: 90%; margin: 0 auto;">Made using Jeklly Garden and maintained using Obsidian</p>
+</footer>
