--- a/_includes/Footer.html
+++ b/_includes/Footer.html
@@ -1,4 +1,4 @@
 
-<footer id="footermessage" style="text-align: center; font-size: min(0.5em, 12px); padding: 8px 0; width: 100%; position: fixed; bottom: 0; left: 0; background-color: #1f1f1f; z-index: 1000;">
-    <p style="margin: 0; opacity: 0.7; max-width: 90%; margin: 0 auto;">Made using Jeklly Garden and maintained using Obsidian</p>
+<footer id="footermessage" style="text-align: center; font-size: min(0.25em, 8px); padding: 8px 0; width: 100%; position: fixed; bottom: 0; left: 0; z-index: 1000;">
+    <p style="margin: 0; opacity: 0.5; max-width: 90%; margin: 0 auto;">Made using Jeklly Garden and maintained using Obsidian</p>
 </footer>
