--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,52 +3,50 @@ layout: Stylesheet
 --- 
 @import "fruity.css";
 
-
 html,
 html[data-theme="light"] {
-    --color-bg-main: #FFFFFF;
-    --color-bg-sub: #FAFAFC;
-    --color-text-main: #282832;
-    --color-text-sub: #5D5D67;
-    --color-text-link: #2380ED;
-    --color-border-dark: #363636;
-    --color-border: #BABCBD;
+    --color-bg-main: #FFFCF0;
+    --color-bg-sub: #FFFCF0;
+    --color-text-main: #1C1B1A;
+    --color-text-sub: #1C1B1A;
+    --color-text-link: #8B7EC8;
+    --color-border-dark: #1C1B1A;
+    --color-border: #1C1B1A;
     --color-border-light: #E5E5E5;
 }
 
 html[data-theme="dark"] {
-    --color-bg-main: #262626;
-    --color-bg-sub: #18181C;
-    --color-text-main: #FAFAFC;
-    --color-text-sub: #FFFEFF;
-    --color-text-link: #6D9EFF;
-    --color-border-dark: #E6E6E6;
-    --color-border: #696969;
+    --color-bg-main: #1C1B1A;
+    --color-bg-sub: #1C1B1A;
+    --color-text-main: #F2F0E5;
+    --color-text-sub: #F2F0E5;
+    --color-text-link: #3AA99F;
+    --color-border-dark: #F2F0E5;
+    --color-border: #F2F0E5;
     --color-border-light: #353535;
 }
 
 @media (prefers-color-scheme: dark) {
-
     html,
     html[data-theme="dark"] {
-        --color-bg-main: #262626;
-        --color-bg-sub: #18181C;
-        --color-text-main: #FAFAFC;
-        --color-text-sub: #FFFEFF;
-        --color-text-link: #6D9EFF;
-        --color-border-dark: #E6E6E6;
-        --color-border: #696969;
+        --color-bg-main: #1C1B1A;
+        --color-bg-sub: #1C1B1A;
+        --color-text-main: #F2F0E5;
+        --color-text-sub: #F2F0E5;
+        --color-text-link: #3AA99F;
+        --color-border-dark: #F2F0E5;
+        --color-border: #F2F0E5;
         --color-border-light: #353535;
     }
 
     html[data-theme="light"] {
-        --color-bg-main: #FFFFFF;
-        --color-bg-sub: #FAFAFC;
-        --color-text-main: #282832;
-        --color-text-sub: #5D5D67;
-        --color-text-link: #2380ED;
-        --color-border-dark: #363636;
-        --color-border: #BABCBD;
+        --color-bg-main: #FFFCF0;
+        --color-bg-sub: #FFFCF0;
+        --color-text-main: #1C1B1A;
+        --color-text-sub: #1C1B1A;
+        --color-text-link: #8B7EC8;
+        --color-border-dark: #1C1B1A;
+        --color-border: #1C1B1A;
         --color-border-light: #E5E5E5;
     }
 }
