Updated Nav bar and removed notes

--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -1,7 +1,7 @@
 {%- comment -%}
 *
 * MIT License
-* Copyright (c) 2022 Raghuveer S, Hiran Venugopalan, Rahul Rajeev
+* Copyright (c) 2025 Raghuveer S, Hiran Venugopalan, Rahul Rajeev
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
@@ -52,17 +52,8 @@
     
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a href="{{'/notes' | relative_url}}" class="navbar-item">
-          My Notes
-        </a>
-        <a href="../lists" class="navbar-item">
-          Lists
-        </a>
-        <a href="https://blog.rahulrajeev.net/#/portal/signup" target="_blank" class="navbar-item">
-          Newsletter
-        </a>
-        <a href="../pages/about" class="navbar-item">
-          About
+        <a href="https://instagram.com/rdrawsstuff" target="_blank" class="navbar-item">
+          Sketchbook
         </a>
         <a href="https://www.linkedin.com/in/rahulrajeeev/"  target="_blank" class="navbar-item">
           Connect
