Added new favicons
Reverse if this breaks.

--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -50,6 +50,12 @@
     <meta content="{{ site.url }}{{ page.url }}" property="og:url">
     {%- endif -%}
 
+    <!-- Add these favicon links -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/assets/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/assets/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/assets/img/favicon-16x16.png">
+    <link rel="manifest" href="{{ site.baseurl }}/site.webmanifest">
+    
     <title>{{page.title}} - {{site.heading}}</title>
 
 <!--MS Clarity -->
