--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -33,10 +33,11 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="Rahul Rajeev" property="og:site_name" />
     <meta
-        content="Writer | Artist | Head of Operations at Dreamflakes"
+        content="Narrative led Brand Identity Design Services"
         property="og:description">
     <meta content="{{ site.url }}/about/" property="article:author">
-    <meta property="og:image" content="../assets/img/ravicon.png">
+    <meta property="og:image" content="../assets/img/favicon-32x32.png">
+    <meta content="summary_large_image" name="twitter:card">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&display=swap"
