--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -32,6 +32,8 @@
 <head>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="Rahul Rajeev" property="og:site_name" />
+    <!-- Add meta description -->
+    <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
     <meta
         content="Narrative led Brand Identity Design Services"
         property="og:description">
